build: migrate to serverless devs

--- a/.deploy/Jenkinsfile
+++ b/.deploy/Jenkinsfile
@@ -44,10 +44,9 @@ pipeline {
         script {
           try {
             withCredentials([usernamePassword(credentialsId: '6384c2ec-5a4d-4b6c-ad57-992dc5a88842', usernameVariable: 'ACCESS_KEY_ID', passwordVariable: 'ACCESS_KEY_SECRET')]) {
-              sh "curl -o fun-linux.zip http://funcruft-release.oss-accelerate.aliyuncs.com/fun/fun-v3.6.21-linux.zip"
-              sh "unzip fun-linux.zip"
-              sh "mv fun-v3.6.21-linux /usr/local/bin/fun"
-              sh "cd ./.deploy && fun deploy -y"
+              sh "npm install @serverless-devs/s -g"
+              sh "s config add --AccessKeyID ${ACCESS_KEY_ID} --AccessKeySecret ${ACCESS_KEY_SECRET} --AccountID ${ACCOUNT_ID} -a default"
+              sh "cd ./.deploy && s deploy -y"
             }
           } catch(err) {
             echo err.getMessage()
