bugfix: fix deploy

--- a/.deploy/Jenkinsfile
+++ b/.deploy/Jenkinsfile
@@ -46,7 +46,7 @@ pipeline {
             withCredentials([usernamePassword(credentialsId: '6384c2ec-5a4d-4b6c-ad57-992dc5a88842', usernameVariable: 'ACCESS_KEY_ID', passwordVariable: 'ACCESS_KEY_SECRET')]) {
               sh "npm install @serverless-devs/s -g"
               sh "s config add --AccessKeyID ${ACCESS_KEY_ID} --AccessKeySecret ${ACCESS_KEY_SECRET} --AccountID ${ACCOUNT_ID} -a default"
-              sh "cd ./.deploy && s deploy -y"
+              sh "cd ./.deploy && s deploy --use-local -y"
             }
           } catch(err) {
             echo err.getMessage()
