build: build on master

--- a/.deploy/Jenkinsfile
+++ b/.deploy/Jenkinsfile
@@ -38,7 +38,7 @@ pipeline {
     }
     stage('部署') {
       when {
-        buildingTag()
+        branch 'master'
       }
       steps {
         script {
