--- a/specs/function-func-iptv.yaml
+++ b/specs/function-func-iptv.yaml
@@ -1,5 +1,5 @@
 include:
-- src.zip
+  - src.zip
 kind: ArchiveUploadSpec
 name: src-zip-Gt2V
 
@@ -9,14 +9,14 @@ kind: Package
 metadata:
   creationTimestamp: null
   name: func-iptv-0ba4a0ab-ea57-45db-a3fa-ff05345b77f6
-  namespace: fission
+  namespace: fission-function
 spec:
   buildcmd: ./customBuild.sh
   deployment:
     checksum: {}
   environment:
     name: go
-    namespace: fission
+    namespace: fission-function
   source:
     checksum: {}
     type: url
@@ -31,7 +31,7 @@ kind: Function
 metadata:
   creationTimestamp: null
   name: func-iptv
-  namespace: fission
+  namespace: fission-function
 spec:
   InvokeStrategy:
     ExecutionStrategy:
@@ -44,13 +44,13 @@ spec:
   concurrency: 500
   environment:
     name: go
-    namespace: fission
+    namespace: fission-function
   functionTimeout: 60
   idletimeout: 120
   package:
     functionName: Handler
     packageref:
       name: func-iptv-0ba4a0ab-ea57-45db-a3fa-ff05345b77f6
-      namespace: fission
+      namespace: fission-function
   requestsPerPod: 1
   resources: {}
