--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,5 +27,5 @@ jobs:
           tags: ${{ env.IMAGE_NAME }}:${{ github.ref_name }}, ${{ env.IMAGE_NAME }}:latest
           cache-from: type=registry,ref=${{ env.IMAGE_NAME }}:latest
           cache-to: type=inline
-          build-args:
-            - VERSION=${{ github.ref_name }}
+          build-args: |
+            VERSION=${{ github.ref_name }}
